--- a/2nd_week/개념정리.md
+++ b/2nd_week/개념정리.md
@@ -1,4 +1,17 @@
 ## YOLO
 
+#### YOLO란? 특징 및 구조
+
 #### 단점
 ![image](https://user-images.githubusercontent.com/79160507/125239631-e1684680-e323-11eb-9e48-b95f63d79d5a.png)
+
+## SSD
+
+
+## FPN
+
+
+## EfficientNet
+
+
+## EfficientDet
